# Local-Log-Analyzer

./: .env.example  .gitignore  README.md  build-production.sh  create-release.sh  deploy.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: analysis.py  chat.py  files.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: chat_service.py  file_processor.py  log_analyzer.py  pattern_detector.py
backend/app/utils/: file_utils.py
frontend/: .env.example  .eslintrc.json  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/dashboard/: Dashboard.tsx  LogEntries.tsx  OverviewCards.tsx  PatternsList.tsx  TimelineChart.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/upload/: FileUpload.tsx  FileUploadZone.tsx  PasteTextArea.tsx
frontend/src/hooks/: useFileStore.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: fileUtils.ts  formatters.ts
sample_logs/: access.csv  api_logs.json  system.syslog
scripts/: setup.sh  start-backend.sh  start-frontend.sh  test-ollama-integration.sh  test-setup.sh  test-upload-functionality.sh
