[tool.poetry]
name = "local-log-analyzer-backend"
version = "1.0.0"
description = "Privacy-first local log analysis application backend"
authors = ["Local Log Analyzer Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pandas = "^2.1.3"
requests = "^2.31.0"
python-json-logger = "^2.0.7"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"
httpx = "^0.25.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true